--- a/src/Views/MergeMultiple.axaml
+++ b/src/Views/MergeMultiple.axaml
@@ -12,13 +12,14 @@
     <TextBlock FontSize="18"
                Classes="bold"
                Text="{DynamicResource Text.MergeMultiple}"/>
+    
     <Grid Margin="0,16,0,0" RowDefinitions="Auto,32,32" ColumnDefinitions="100,*">
       <TextBlock Grid.Row="0" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
-                 Text="{DynamicResource Text.MergeMultiple.Commit}"/>
+                 Text="{DynamicResource Text.MergeMultiple.Targets}"/>
       <ListBox Grid.Row="0" Grid.Column="1"
-               MinHeight="32" MaxHeight="100"
+               MinHeight="32" MaxHeight="100" Margin="0,0,0,4"
                ItemsSource="{Binding Targets}"
                Background="{DynamicResource Brush.Contents}"
                BorderThickness="1"
@@ -42,25 +43,34 @@
         </ListBox.ItemsPanel>
 
         <ListBox.ItemTemplate>
-          <DataTemplate DataType="m:Commit">
-            <Grid ColumnDefinitions="14,Auto,*">
-              <Path Grid.Column="0" Width="14" Height="14" Margin="0,8,0,0" Data="{StaticResource Icons.Commit}"/>
-              <TextBlock Grid.Column="1" FontFamily="{DynamicResource Fonts.Monospace}" VerticalAlignment="Center" Text="{Binding SHA, Converter={x:Static c:StringConverters.ToShortSHA}}" Foreground="DarkOrange" Margin="6,0,4,0"/>
-              <TextBlock Grid.Column="2" VerticalAlignment="Center" Text="{Binding Subject}" TextTrimming="CharacterEllipsis"/>
-            </Grid>
-          </DataTemplate>
+          <DataTemplate>
+            <ContentControl Content="{Binding}">
+              <ContentControl.DataTemplates>
+                <DataTemplate DataType="m:Commit">
+                  <Grid ColumnDefinitions="14,Auto,*">
+                    <Path Grid.Column="0" Width="14" Height="14" Margin="0,8,0,0" Data="{StaticResource Icons.Commit}"/>
+                    <TextBlock Grid.Column="1" FontFamily="{DynamicResource Fonts.Monospace}" VerticalAlignment="Center" Text="{Binding SHA, Converter={x:Static c:StringConverters.ToShortSHA}}" Foreground="DarkOrange" Margin="6,0,4,0"/>
+                    <TextBlock Grid.Column="2" VerticalAlignment="Center" Text="{Binding Subject}" TextTrimming="CharacterEllipsis"/>
+                  </Grid>
+                </DataTemplate>
+
+                <DataTemplate DataType="m:Branch">
+                  <StackPanel Orientation="Horizontal">
+                    <Path Width="14" Height="14" Data="{StaticResource Icons.Branch}"/>
+                    <TextBlock VerticalAlignment="Center" Text="{Binding FriendlyName}" Margin="8,0,0,0"/>
+                  </StackPanel>
+                </DataTemplate>
+              </ContentControl.DataTemplates>
+            </ContentControl>
+          </DataTemplate>          
         </ListBox.ItemTemplate>
       </ListBox>
-      
-      <CheckBox Grid.Row="1" Grid.Column="1"
-                Content="{DynamicResource Text.MergeMultiple.CommitChanges}"
-                IsChecked="{Binding AutoCommit, Mode=TwoWay}"/>
 
-      <TextBlock Grid.Row="2" Grid.Column="0"
+      <TextBlock Grid.Row="1" Grid.Column="0"
                  HorizontalAlignment="Right" VerticalAlignment="Center"
                  Margin="0,0,8,0"
                  Text="{DynamicResource Text.MergeMultiple.Strategy}"/>
-      <ComboBox Grid.Row="2" Grid.Column="1"
+      <ComboBox Grid.Row="1" Grid.Column="1"
                 Height="28" Padding="8,0"
                 VerticalAlignment="Center" HorizontalAlignment="Stretch"
                 ItemsSource="{Binding Source={x:Static m:MergeStrategy.ForMultiple}}"
@@ -74,6 +84,10 @@
           </DataTemplate>
         </ComboBox.ItemTemplate>
       </ComboBox>
+      
+      <CheckBox Grid.Row="2" Grid.Column="1"
+                Content="{DynamicResource Text.MergeMultiple.CommitChanges}"
+                IsChecked="{Binding AutoCommit, Mode=TwoWay}"/>
     </Grid>
   </StackPanel>
 </UserControl>
