--- a/src/Resources/Locales/zh_CN.axaml
+++ b/src/Resources/Locales/zh_CN.axaml
@@ -395,7 +395,7 @@
   <x:String x:Key="Text.Init" xml:space="preserve">初始化新仓库</x:String>
   <x:String x:Key="Text.Init.Path" xml:space="preserve">路径 ：</x:String>
   <x:String x:Key="Text.InProgress.CherryPick" xml:space="preserve">挑选（Cherry-Pick）操作进行中。</x:String>
-  <x:String x:Key="Text.InProgress.CherryPick.Head" xml:space="preserve">当前提交</x:String>
+  <x:String x:Key="Text.InProgress.CherryPick.Head" xml:space="preserve">正在处理提交</x:String>
   <x:String x:Key="Text.InProgress.Merge" xml:space="preserve">合并操作进行中。</x:String>
   <x:String x:Key="Text.InProgress.Rebase" xml:space="preserve">变基（Rebase）操作进行中。</x:String>
   <x:String x:Key="Text.InProgress.Rebase.StoppedAt" xml:space="preserve">当前停止于</x:String>
