--- a/src/Resources/Locales/zh_TW.axaml
+++ b/src/Resources/Locales/zh_TW.axaml
@@ -395,7 +395,7 @@
   <x:String x:Key="Text.Init" xml:space="preserve">初始化存放庫</x:String>
   <x:String x:Key="Text.Init.Path" xml:space="preserve">路徑:</x:String>
   <x:String x:Key="Text.InProgress.CherryPick" xml:space="preserve">揀選 (cherry-pick) 操作進行中。</x:String>
-  <x:String x:Key="Text.InProgress.CherryPick.Head" xml:space="preserve">当前提交</x:String>
+  <x:String x:Key="Text.InProgress.CherryPick.Head" xml:space="preserve">正在處理提交</x:String>
   <x:String x:Key="Text.InProgress.Merge" xml:space="preserve">合併操作進行中。</x:String>
   <x:String x:Key="Text.InProgress.Rebase" xml:space="preserve">重定基底 (rebase) 操作進行中。</x:String>
   <x:String x:Key="Text.InProgress.Rebase.StoppedAt" xml:space="preserve">当前停止于</x:String>
