--- a/src/Resources/Locales/zh_CN.axaml
+++ b/src/Resources/Locales/zh_CN.axaml
@@ -397,6 +397,7 @@
   <x:String x:Key="Text.InProgress.CherryPick" xml:space="preserve">挑选（Cherry-Pick）操作进行中。</x:String>
   <x:String x:Key="Text.InProgress.CherryPick.Head" xml:space="preserve">正在处理提交</x:String>
   <x:String x:Key="Text.InProgress.Merge" xml:space="preserve">合并操作进行中。</x:String>
+  <x:String x:Key="Text.InProgress.Merge.Operating" xml:space="preserve">正在处理</x:String>
   <x:String x:Key="Text.InProgress.Rebase" xml:space="preserve">变基（Rebase）操作进行中。</x:String>
   <x:String x:Key="Text.InProgress.Rebase.StoppedAt" xml:space="preserve">当前停止于</x:String>
   <x:String x:Key="Text.InProgress.Revert" xml:space="preserve">回滚提交操作进行中。</x:String>
