--- a/src/Resources/Locales/zh_TW.axaml
+++ b/src/Resources/Locales/zh_TW.axaml
@@ -411,7 +411,7 @@
   <x:String x:Key="Text.Merge" xml:space="preserve">合併分支</x:String>
   <x:String x:Key="Text.Merge.Into" xml:space="preserve">目標分支:</x:String>
   <x:String x:Key="Text.Merge.Mode" xml:space="preserve">合併方式:</x:String>
-  <x:String x:Key="Text.Merge.Source" xml:space="preserve">合併分支:</x:String>
+  <x:String x:Key="Text.Merge.Source" xml:space="preserve">合併目標:</x:String>
   <x:String x:Key="Text.MergeMultiple" xml:space="preserve">合併（多目標）</x:String>
   <x:String x:Key="Text.MergeMultiple.CommitChanges" xml:space="preserve">提交變更</x:String>
   <x:String x:Key="Text.MergeMultiple.Strategy" xml:space="preserve">合併策略:</x:String>
