ux: update Icons.Commit

--- a/src/Views/WorkingCopy.axaml
+++ b/src/Views/WorkingCopy.axaml
@@ -185,7 +185,7 @@
 
                       <DataTemplate DataType="m:Commit">
                         <StackPanel Orientation="Horizontal">
-                          <Path Width="12" Height="12" Margin="0,6,0,0" Data="{StaticResource Icons.Commit}"/>
+                          <Path Width="12" Height="12" Data="{StaticResource Icons.Commit}"/>
                           <v:CommitRefsPresenter Margin="8,0,0,0"
                                                  TagBackground="{DynamicResource Brush.DecoratorTag}"
                                                  Foreground="{DynamicResource Brush.FG1}"
